RESOLVED FIXED213044
[Cocoa] CRASH: imported/w3c/web-platform-tests/remote-playback/watch-availability-initial-callback.html is flaky crashing
https://bugs.webkit.org/show_bug.cgi?id=213044
Summary [Cocoa] CRASH: imported/w3c/web-platform-tests/remote-playback/watch-availabi...
Jer Noble
Reported 2020-06-10 13:11:23 PDT
[Cocoa] CRASH: imported/w3c/web-platform-tests/remote-playback/watch-availability-initial-callback.html is flaky crashing
Attachments
Patch (2.55 KB, patch)
2020-06-10 13:15 PDT, Jer Noble
jer.noble: commit-queue+
Jer Noble
Comment 1 2020-06-10 13:11:48 PDT
Jer Noble
Comment 2 2020-06-10 13:15:19 PDT
Jer Noble
Comment 3 2020-06-10 17:01:54 PDT
Looks like the orange EWS results are an unrelated CSS Grid failure. Landing.
EWS
Comment 4 2020-06-10 17:33:28 PDT
Committed r262880: <https://trac.webkit.org/changeset/262880> All reviewed patches have been landed. Closing bug and clearing flags on attachment 401574 [details].
Note You need to log in before you can comment on or make changes to this bug.