[Cocoa] CRASH: imported/w3c/web-platform-tests/remote-playback/watch-availability-initial-callback.html is flaky crashing https://bugs.webkit.org/show_bug.cgi?id=213044 <rdar://problem/62317723>

Reviewed by Eric Carlson.

Add null-checks around previously non-null-checked derefs of WeakPtr<HTMLMediaElement>.

* Modules/remoteplayback/RemotePlayback.cpp:
(WebCore::RemotePlayback::watchAvailability):
(WebCore::RemotePlayback::shouldPlayToRemoteTargetChanged):
(WebCore::RemotePlayback::playbackTargetPickerWasDismissed):


Canonical link: https://commits.webkit.org/225846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262880 268f45cc-cd09-0410-ab3c-d52691b4dbfc